Files validation route (MAPCO-3762)  (#38)
* feat: add files checks before ingestion

* feat: openapi spec

* feat: validateSources

* fix: error messages

* fx: pr changes

* feat: added integration tests

* fix: error message on resolution
